Attempting alignment fix
Live view appears different to Netlify hosting view. Attempting to fix alignment issue.

--- a/src/style.css
+++ b/src/style.css
@@ -102,11 +102,6 @@ footer {
   letter-spacing: 0.1rem;
 }
 
-.container {
-  padding: 0 20px;
-  margin: 0 50px;
-}
-
 .about-description {
   width: 100%;
   margin-left: auto;
